--- a/git-github.mkd
+++ b/git-github.mkd
@@ -8,6 +8,7 @@
 - git add + nombre // para agregar el archivo o modificacion que quiero 
 - git add . // agrego todas las modificaciones de una
 - git commit -m "descripcion de lo que se trabajo" // realizo un comentario para que otros sepan que se modificó
+- git log // para ver quien hizo las maodificaciones
 
 ## Comandos para manejar las ramas (branch)
 - git branch -m // para cambiar el nombre a la rama 
